landing with blue background test

--- a/css/style.css
+++ b/css/style.css
@@ -53,10 +53,11 @@ main{
 /* CONTAINER STADIUM BACKGROUNDS */
 
 #Uefaopening{
-  background-image: url('/Users/wilsonurias/Desktop/Champions League Matchups/Images/UCL.jpg');
+  background-color: darkblue;
+  /* background-image: url('/Users/wilsonurias/Desktop/Champions League Matchups/Images/UCL.jpg');
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: center center;
+  background-position: center center; */
 }
 
 /* #juveportobg{
