landing with just image url

--- a/css/style.css
+++ b/css/style.css
@@ -53,9 +53,8 @@ main{
 /* CONTAINER STADIUM BACKGROUNDS */
 
 #Uefaopening{
-  background-color: darkblue;
-  /* background-image: url('/Users/wilsonurias/Desktop/Champions League Matchups/Images/UCL.jpg');
-  background-size: cover;
+  background-image: url('/Users/wilsonurias/Desktop/Champions League Matchups/Images/UCL.jpg');
+  /* background-size: cover;
   background-repeat: no-repeat;
   background-position: center center; */
 }
