--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ main{
 /* CONTAINER STADIUM BACKGROUNDS */
 
 #Uefaopening{
-  background-image: url('/Users/wilsonurias/Desktop/Champions League Matchups/Images/UCL.jpg');
+  background-image: url('Images/UCL.jpg');
   /* background-size: cover;
   background-repeat: no-repeat;
   background-position: center center; */
